--- a/styles/landingPageStyle.css
+++ b/styles/landingPageStyle.css
@@ -6,7 +6,7 @@ body{
     margin:0;
     display: flex;
     flex-direction: column;
-    background-image: linear-gradient(45deg,#2271B3,#ACE5EE);
+    background:linear-gradient(#ACE5EE,#2271B3);
     font-family: Helvetica;
     color:	#ACE5EE;
 }
@@ -21,6 +21,10 @@ ul>li{
 
 a{
     text-decoration: none;
+}
+
+input{
+    border: 0;
 }
 
 main{
@@ -71,8 +75,15 @@ ul.navigation>li:last-child{
     padding: 0;
 }
 
+.form-description{
+    background: url(images/scale_1200.jpg);
+}
+
 .description{
     margin:0 2em;
+    background-image: linear-gradient(90deg,#00248f 65%,#ACE5EE);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .principles{
@@ -91,6 +102,10 @@ ul.navigation>li:last-child{
     width:10em;
 }
 
+.principles-description{
+    width:40em;
+}
+
 .trust{
     margin:0 2em
 }
@@ -100,21 +115,51 @@ ul.navigation>li:last-child{
     display:flex;
     flex-direction: column;
     justify-content: space-between;
-    color:	#ACE5EE;
-    background-color: #408DD2;
+    color:#00248f;
 }
 
 div.search-inputs{
-    width: 90vw;
-    max-width: 55em;
     display: grid;
-    gap: 0.5em;
-    grid-template-columns: auto 1fr 1fr;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(3,1fr);
+    grid-template-areas: "o . ."
+                         "s do dp"
+                         "k . b";
+    gap:1em;
 }
 
-div.search-form input{
-    grid-column-start: 2;
-    grid-column-end: 4;
+div.search-inputs>input{
+    height:2em;
+}
+
+#flight-from{
+    grid-area: o;
+}
+
+#flight-to{
+    grid-area: k;
+}
+
+#departure-date{
+    grid-area: do;
+}
+
+#back-date{
+    grid-area: dp;
+}
+
+#passanger-count{
+    grid-area: qw;
+}
+
+#bottom-arrow{
+    grid-area: s;
+    text-align: center;
+    font-size: 2em;
+}
+
+#search-button{
+    grid-area: b;
 }
 
 div.search-form label{
@@ -127,7 +172,8 @@ div.search-form label{
     align-self: flex-end;
     margin-top:1em;
     border-radius: .5em;
-
+    background-image: linear-gradient(90deg,#8B00FF,#1F75FE,#00FF00);
+    color:antiquewhite
 }
 
 div.search-form [type="text"],div.search-form [type="number"]{
@@ -139,13 +185,15 @@ div.search-form [type="text"],div.search-form [type="number"]{
     margin:0 2em;
 }
 
+.promotions{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap:1em;
+}
+
 .promo{
     display: grid;
-    gap: 1em;
-    grid-template-columns: 10em 1fr;
-    grid-template-rows: 1em 1fr 2em;
-    margin:1em;
-    padding-right: 1em;
+    gap:1em;
 }
 
 .promo-image{
@@ -154,22 +202,17 @@ div.search-form [type="text"],div.search-form [type="number"]{
     width:10em;
 }
 
-footer{
-    display: flex;
-    justify-content: space-around;
-    background-color: #043A6B;
-}
-
-input{
-    border: 0;
-}
-
 .subscribe-on-closed-promo{
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-bottom: 2em;
-    background-color: #679FD2;
+}
+
+footer{
+    display: flex;
+    justify-content: space-around;
+    background-color: #043A6B;
 }
 
 .navigation-links{
