--- a/styles/placesStyle.css
+++ b/styles/placesStyle.css
@@ -41,7 +41,7 @@ body{
 input[type="button"].place{
     color: #043A6B;
     background: #ACE5EE;
-    width:auto;
+    min-width:2em;
     height:2em;
     padding:0;
     margin:0;
