--- a/b-module/layout/index.html
+++ b/b-module/layout/index.html
@@ -351,19 +351,22 @@
         <section class="mt-5">
           <div class="d-flex justify-content-between align-items-baseline mb-4">
             <h4>Passengers</h4>
-            <button class="btn btn-primary btn-sm test-5-add">
+            <button class="btn btn-primary btn-sm test-5-add" @click="addNewPassenger">
               Add passenger
             </button>
           </div>
 
           <form action="booking_management.html">
-            <div class="row">
+            <div class="row" v-for="(passenger,index) in forms.passengers" :key="index">
               <div class="col-12 col-sm-6 col-lg-4 col-xl-3 pr-lg-0">
                 <input
                   type="text"
                   class="form-control test-5-name w-100"
                   placeholder="First name"
+                  v-model="passenger.firstName"
+                  :class="{'is-invalid':errors.passengers[index].firstName}"
                 />
+                <small class="invalid-feedback">{{errors.passengers[index].firstName}}</small>
               </div>
               <div
                 class="col-12 col-sm-6 col-lg-4 mt-3 col-xl-3 mt-sm-0 pr-lg-0"
@@ -372,7 +375,10 @@
                   type="text"
                   class="form-control test-5-last w-100"
                   placeholder="Last name"
+                  v-model="passenger.lastName"
+                  :class="{'is-invalid':errors.passengers[index].lastName}"
                 />
+                <small class="invalid-feedback">{{errors.passengers[index].lastName}}</small>
               </div>
               <div
                 class="col-12 col-sm-6 col-lg-2 mt-3 col-xl-2 mt-lg-0 pr-lg-0"
@@ -381,7 +387,10 @@
                   type="text"
                   class="form-control test-5-dob"
                   placeholder="Date of Birth"
+                  v-model="passenger.birthDate"
+                  :class="{'is-invalid':errors.passengers[index].birthDate}"
                 />
+                <small class="invalid-feedback">{{errors.passengers[index].birthDate}}</small>
               </div>
               <div
                 class="col-12 col-sm-6 col-lg-2 mt-3 col-xl-2 mt-lg-0 pr-xl-0"
@@ -390,23 +399,107 @@
                   type="text"
                   class="form-control test-5-doc"
                   placeholder="Document number"
+                  v-model="passenger.documentNumber"
+                  :class="{'is-invalid':errors.passengers[index].documentNumber}"
                 />
+                <small class="invalid-feedback">{{errors.passengers[index].documentNumber}}</small>
               </div>
               <div class="col-12 col-xl-2 mt-3 mt-xl-0">
                 <button
                   class="btn btn-danger btn-sm form-control test-5-bremove"
+                  @click="removePassenger(index)"
                 >
                   Remove
                 </button>
               </div>
             </div>
 
-            <button class="btn btn-success mt-4 form-control test-5-book">
+            <button class="btn btn-success mt-4 form-control test-5-book" @click="makeBooking" >
               Confirm
             </button>
           </form>
         </section>
       </div>
+
+      <div class="container" v-if="page === 'booking_management'">
+        <section class="mt-5">
+            <div class="d-flex justify-content-between align-items-start">
+                <h2 class="mb-4">
+                    Booking <span class="test-6-code">{{currentBooking.code}}</span>
+                </h2>
+                <a href="index.html" class="btn btn-sm btn-secondary test-6-gohome">Home</a>
+            </div>
+
+            <p>Booking cost: <span class="test-6-tp">{{currentBooking.cost}}</span></p>
+            
+            <div class="d-flex justify-content-between align-items-baseline mt-5 mb-2">
+                <h4>Information about the bus flight</h4>
+            </div>
+
+            <table class="table table-hover table-bordered">
+                <tr>
+                    <th>Flight</th>
+                    <th>Bus</th>
+                    <th>From where</th>
+                    <th>Date and time of departure</th>
+                    <th>To where</th>
+                    <th>Arrival time</th>
+                    <th>Flight time</th>
+                </tr>
+                <tr>
+                    <td class="test-6-fc">FC 2144</td>
+                    <td class="test-6-ac">КАВЗ-4235 Аврора</td>
+                    <td class="test-6-from">Cheboksary</td>
+                    <td>
+                        <span class="test-6-dd">01-05-2020</span>
+                        at
+                        <span class="test-6-dt">05:30</span>
+                    </td>
+                    <td class="test-6-to">Kazan</td>
+                    <td class="test-6-at">18:00</td>
+                    <td class="test-6-ft">
+                        <span class="test-6-fhour">12</span>h
+                        <span class="test-6-fminutes">30</span>min
+                    </td>
+                </tr>
+
+            </table>
+
+            <div class="d-flex justify-content-between align-items-baseline mt-5 mb-4">
+                <h4>Passengers</h4>
+            </div>
+            
+            <table class="table table-hover">
+                <tr>
+                    <th>First name</th>
+                    <th>Last name</th>
+                    <th>Date of Birth</th>
+                    <th>Document number</th>
+                    <th>Place</th>
+                </tr>
+                <tr>
+                    <td class="test-6-name">John</td>
+                    <td class="test-6-last">Doe</td>
+                    <td class="test-6-dob">01-01-1990</td>
+                    <td class="test-6-doc">8484548413</td>
+                    <td class="test-6-seat">1B</td>
+                </tr>
+                <tr>
+                    <td class="test-6-name">Ivan</td>
+                    <td class="test-6-last">Ivanov</td>
+                    <td class="test-6-dob">24-10-2001</td>
+                    <td class="test-6-doc">6565752703</td>
+                    <td class="test-6-seat">2B</td>
+                </tr>
+
+            </table>
+
+            <a href="seat.html" class="btn btn-primary test-6-select">Select place</a>
+
+        </section>
+        
+    </div>
+
 
       <footer class="mt-5">
         <div class="container">
