--- a/b-module/layout/index.html
+++ b/b-module/layout/index.html
@@ -30,7 +30,7 @@
                 <a class="nav-link test-0-nav-3" href="#">Check-in</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link test-0-nav-4" href="login.html"
+                <a class="nav-link test-0-nav-4" @click="goPersonalArea"
                   >Personal area</a
                 >
               </li>
@@ -541,7 +541,7 @@
             </tr>
           </table>
 
-          <a href="seat.html" class="btn btn-primary test-6-select"
+          <a @click="goToSeats" class="btn btn-primary test-6-select"
             >Select place</a
           >
         </section>
@@ -561,22 +561,21 @@
                   <th>Last name</th>
                   <th>Place</th>
                 </tr>
-                <tr>
-                  <td class="test-90-name">John</td>
-                  <td class="test-90-last">Doe</td>
+                <tr
+                  v-for="passenger of currentBooking.passengers"
+                  :class="{'selected':passenger.documentNumber==forms.seat.passenger}"
+                >
+                  <td class="test-90-name">{{passenger.firstName}}</td>
+                  <td class="test-90-last">{{passenger.lastName}}</td>
                   <td>
-                    <span class="test-90-seat">1A</span>
-                    <button class="btn btn-secondary ml-3 test-90-bselect">
-                      Select
-                    </button>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="test-90-name">Ivan</td>
-                  <td class="test-90-last">Ivanov</td>
-                  <td>
-                    <span class="test-90-seat">1B</span>
-                    <button class="btn btn-secondary ml-3 test-90-bselect">
+                    <span class="test-90-seat"
+                      >{{passenger.documentNumber==forms.seat.passenger&&forms.seat.seat||passenger.placeBack
+                      || 'Is not selected'}}</span
+                    >
+                    <button
+                      class="btn btn-secondary ml-3 test-90-bselect"
+                      @click="selectPassenger(passenger.documentNumber)"
+                    >
                       Select
                     </button>
                   </td>
@@ -584,13 +583,11 @@
               </table>
 
               <a
-                href="booking_management.html"
+                @click="returnToManagementFromSeats"
                 class="btn test-90-bback btn-secondary"
                 >Back</a
               >
-              <a
-                href="booking_management.html"
-                class="btn test-90-bconfirm btn-success"
+              <a @click="changeSeat" class="btn test-90-bconfirm btn-success"
                 >Confirm</a
               >
             </div>
@@ -629,8 +626,8 @@
               <div class="d-flex mb-2">
                 <div class="number">1</div>
                 <div class="d-flex mr-3">
-                  <div class="seat test-100-1a seat-selected"></div>
-                  <div class="seat test-100-1b seat-selected"></div>
+                  <div class="seat test-100-1a"></div>
+                  <div class="seat test-100-1b"></div>
                 </div>
                 <div class="d-flex ml-3">
                   <div class="seat test-100-1c"></div>
@@ -807,6 +804,385 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <div
+        class="container vh-100 d-flex align-items-center justify-content-center"
+        v-if="page === 'registration'"
+      >
+        <section class="mt-5 w-75">
+          <h2 class="mb-5 text-center">Registration</h2>
+
+          <form @submit.prevent="register">
+            <div class="row">
+              <div class="col-12 col-md-6">
+                <input
+                  type="text"
+                  class="form-control test-2-name"
+                  placeholder="Frist name"
+                  v-model="forms.registration.first_name"
+                  :class="{'is-invalid':errors.registration.first_name}"
+                />
+                <div class="invalid-feedback test-1-emfn">
+                  {{errors.registration.first_name}}
+                </div>
+              </div>
+              <div class="col-12 mt-3 col-md-6 mt-md-0">
+                <input
+                  type="text"
+                  class="form-control test-2-last"
+                  placeholder="Last name"
+                  v-model="forms.registration.last_name"
+                  :class="{'is-invalid':errors.registration.last_name}"
+                />
+                <div class="invalid-feedback test-2-emln">
+                  {{errors.registration.last_name}}
+                </div>
+              </div>
+              <div class="col-12 mt-3 col-md-6">
+                <input
+                  type="text"
+                  class="form-control test-2-doc"
+                  placeholder="Document number"
+                  v-model="forms.registration.document_number"
+                  :class="{'is-invalid':errors.registration.document_number}"
+                />
+                <div class="invalid-feedback test-2-emdn">
+                  {{errors.registration.document_number}}
+                </div>
+              </div>
+              <div class="col-12 mt-3 col-md-6">
+                <input
+                  type="text"
+                  class="form-control test-2-phone"
+                  placeholder="Phone"
+                  v-model="forms.registration.phone"
+                  :class="{'is-invalid':errors.registration.phone}"
+                />
+                <div class="invalid-feedback test-2-empn">
+                  {{errors.registration.phone}}
+                </div>
+              </div>
+              <div class="col-12 mt-3 col-md-6">
+                <input
+                  type="password"
+                  class="form-control test-2-pass"
+                  placeholder="Password"
+                  v-model="forms.registration.password"
+                  :class="{'is-invalid':errors.registration.password}"
+                />
+                <div class="invalid-feedback test-2-empw">
+                  {{errors.registration.password}}
+                </div>
+              </div>
+              <div class="col-12 mt-3 col-md-6">
+                <input
+                  type="password"
+                  class="form-control test-2-pass2"
+                  placeholder="Password confirmation"
+                  v-model="forms.registration.double_password"
+                  :class="{'is-invalid':errors.registration.double_password}"
+                />
+                <div class="invalid-feedback test-2-empw2">
+                  {{errors.registration.double_password}}
+                </div>
+              </div>
+              <div class="col-12 mt-3">
+                <button class="btn btn-primary w-100 test-2-btn">
+                  Register now
+                </button>
+                <div class="text-center mt-2">
+                  Already have an account?
+                  <a @click.prevent="go('login')" class="test-2-blgn">Log in</a>
+                  or
+                  <a @click.prevent="go('main')" class="test-2-bbhm"
+                    >Back home</a
+                  >
+                </div>
+              </div>
+            </div>
+          </form>
+        </section>
+      </div>
+
+      <div
+        v-if="page === 'login'"
+        class="container vh-100 d-flex align-items-center justify-content-center"
+      >
+        <section class="mt-5 w-75">
+          <h2 class="mb-5 text-center">Log in</h2>
+
+          <form @submit.prevent="login">
+            <div class="row">
+              <div class="col-12">
+                <!-- is-invalid class show error message -->
+                <input
+                  type="text"
+                  class="form-control test-1-fpn"
+                  placeholder="Phone"
+                  v-model="forms.login.phone"
+                  :class="{'is-invalid':errors.login.phone}"
+                />
+                <div class="invalid-feedback test-1-emph">
+                  {{errors.login.phone}}
+                </div>
+              </div>
+              <div class="col-12 mt-2">
+                <input
+                  type="password"
+                  class="form-control test-1-fps"
+                  placeholder="Password"
+                  v-model="forms.login.password"
+                  :class="{'is-invalid':errors.login.password}"
+                />
+                <div class="invalid-feedback test-1-emps">
+                  {{errors.login.password}}
+                </div>
+              </div>
+              <div class="col-12 mt-4">
+                <button class="btn btn-primary w-100 test-1-fbs">Log in</button>
+                <div class="text-center mt-2">
+                  Don't have an account yet?
+                  <a @click.prevent="go('registration')" class="test-1-bsu"
+                    >Sign up</a
+                  >
+                  or
+                  <a @click.prevent="go('main')" class="test-1-bbh"
+                    >Back home</a
+                  >
+                </div>
+              </div>
+            </div>
+          </form>
+        </section>
+      </div>
+
+      <div class="container" v-if="page === 'profile'">
+        <section class="mt-5">
+          <div class="d-flex justify-content-between align-items-start">
+            <h2 class="mb-4">
+              Welcome,
+              <span class="test-3-name">John</span>
+              <span class="test-3-last">Doe</span>
+            </h2>
+            <a class="btn btn-sm btn-secondary test-3-logout" href="index.html"
+              >Logout</a
+            >
+          </div>
+
+          <p>Completed <span class="test-3-numflights">10</span> bus flights</p>
+        </section>
+
+        <section class="mt-5 favorites">
+          <h4 class="mb-4">Favorites bus flights</h4>
+
+          <table class="table table-hover">
+            <tr>
+              <td>
+                <span class="test-3-from">Cheboksary</span> ->
+                <span class="test-3-to">Kazan</span>
+                <br />
+                <span class="test-3-from">Kazan</span> ->
+                <span class="test-3-to">Cheboksary</span>
+              </td>
+              <td>
+                Departure at
+                <span class="test-3-t1">05:30</span>
+
+                <br />
+
+                Departure at
+                <span class="test-3-t1">21:00</span>
+              </td>
+              <td>
+                Arrival at <span class="test-3-t2">18:00</span>
+                <br />
+                Arrival at <span class="test-3-t2">08:00</span>
+              </td>
+              <td>
+                <a
+                  href="booking_again_example.html"
+                  class="btn btn-sm btn-primary test-3-booknow"
+                  >Book now</a
+                >
+                <a href="#" class="btn btn-sm btn-danger test-3-removf"
+                  >Remove from favorites</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <span class="test-3-from">Cheboksary</span> ->
+                <span class="test-3-to">Kazan</span>
+                <br />
+                <span class="test-3-from">Kazan</span> ->
+                <span class="test-3-to">Cheboksary</span>
+              </td>
+              <td>
+                Departure at
+                <span class="test-3-t1">05:30</span>
+
+                <br />
+
+                Departure at
+                <span class="test-3-t1">21:00</span>
+              </td>
+              <td>
+                Arrival at <span class="test-3-t2">18:00</span>
+                <br />
+                Arrival at <span class="test-3-t2">08:00</span>
+              </td>
+              <td>
+                <a
+                  href="booking_again_example.html"
+                  class="btn btn-sm btn-primary test-3-booknow"
+                  >Book now</a
+                >
+                <a href="#" class="btn btn-sm btn-danger test-3-removf"
+                  >Remove from favorites</a
+                >
+              </td>
+            </tr>
+          </table>
+        </section>
+
+        <section class="mt-5 past">
+          <h4 class="mb-4">Past reservations</h4>
+
+          <table class="table table-hover">
+            <tr>
+              <td>
+                <span class="test-3-from">Cheboksary</span> ->
+                <span class="test-3-to">Kazan</span>
+                <br />
+                <span class="test-3-from">Kazan</span> ->
+                <span class="test-3-to">Cheboksary</span>
+              </td>
+              <td>
+                Departured
+                <span class="test-3-d1">01-05-2020</span>
+                at
+                <span class="test-3-t1">05:30</span>
+
+                <br />
+
+                Departured
+                <span class="test-3-d1">01-05-2020</span>
+                at
+                <span class="test-3-t1">21:00</span>
+              </td>
+              <td>
+                Arrived at <span class="test-3-t2">18:00</span>
+                <br />
+                Arrived at <span class="test-3-t2">08:00</span>
+              </td>
+              <td>
+                <a href="#" class="btn btn-sm btn-primary">Add to favorites</a>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <span class="test-3-from">Kazan</span> ->
+                <span class="test-3-to">Cheboksary</span>
+                <br />
+                <span class="test-3-from">Cheboksary</span> ->
+                <span class="test-3-to">Kazan</span>
+              </td>
+              <td>
+                Departured
+                <span class="test-3-d1">01-05-2020</span>
+                at
+                <span class="test-3-t1">05:30</span>
+
+                <br />
+
+                Departured
+                <span class="test-3-d1">01-05-2020</span>
+                at
+                <span class="test-3-t1">21:00</span>
+              </td>
+              <td>
+                Arrived at <span class="test-3-t2">18:00</span>
+                <br />
+                Arrived at <span class="test-3-t2">08:00</span>
+              </td>
+              <td>
+                <a
+                  href="#"
+                  class="btn btn-sm btn-primary test-3-add-to-favorites"
+                  >Add to favorites</a
+                >
+              </td>
+            </tr>
+          </table>
+        </section>
+
+        <section class="mt-5 upcoming">
+          <h4 class="mb-4">Upcoming reservations</h4>
+
+          <table class="table table-hover">
+            <tr>
+              <td>
+                <a class="test-3-code" href="booking_management.html">AFADS</a>
+              </td>
+              <td>
+                <span class="test-3-from">Cheboksary</span> ->
+                <span class="test-3-to">Kazan</span>
+                <br />
+                <span class="test-3-from">Kazan</span> ->
+                <span class="test-3-to">Cheboksary</span>
+              </td>
+              <td>
+                Departure
+                <span class="test-3-d1">01-05-2020</span>
+                at
+                <span class="test-3-t1">05:30</span>
+
+                <br />
+
+                Departure
+                <span class="test-3-d1">01-05-2020</span>
+                at
+                <span class="test-3-t1">21:00</span>
+              </td>
+              <td>
+                Arrival at <span class="test-3-t2">18:00</span>
+                <br />
+                Arrival at <span class="test-3-t2">08:00</span>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <a class="test-3-code" href="booking_management.html">IFAAV</a>
+              </td>
+              <td>
+                <span class="test-3-from">Cheboksary</span> ->
+                <span class="test-3-to">Kazan</span>
+                <br />
+                <span class="test-3-from">Kazan</span> ->
+                <span class="test-3-to">Cheboksary</span>
+              </td>
+              <td>
+                Departure
+                <span class="test-3-d1">01-05-2020</span>
+                at
+                <span class="test-3-t1">05:30</span>
+
+                <br />
+
+                Departure
+                <span class="test-3-d1">01-05-2020</span>
+                at
+                <span class="test-3-t1">21:00</span>
+              </td>
+              <td>
+                Arrival at <span class="test-3-t2">21:00</span>
+                <br />
+                Arrival at <span class="test-3-t2">08:00</span>
+              </td>
+            </tr>
+          </table>
+        </section>
       </div>
 
       <footer class="mt-5">
